Fixes scroll up arrow and contact me labels
Scroll up arrow in responsive window repositioned, the contact me labels were growing out of the screen

--- a/styles.css
+++ b/styles.css
@@ -405,8 +405,12 @@ footer {
         font-size: 1em;
     }
 
-    .scroll-down, .scroll-up {
+    .scroll-down {
         bottom: -200px; /* Adjust as needed */
+    }
+
+    .scroll-up {
+        bottom: auto;
     }
 
     .about-container {
@@ -425,6 +429,7 @@ footer {
     #contact .contact-content {
         flex-direction: column;
         align-items: center;
+        margin-right: 25px;
     }
 
     #contact .contact-form {
